Fixes layout bug with idea overlays

--- a/app/assets/stylesheets/application/components/_drop_area.css.sass
+++ b/app/assets/stylesheets/application/components/_drop_area.css.sass
@@ -16,6 +16,7 @@
 
   +box-shadow($pre-drop-color 0 0 10px 5px)
   background-color: $pre-drop-color
+  display:          none
 
   &.qq-upload-drop-area-active
     +box-shadow(none)  
